--- a/donate.html
+++ b/donate.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Donate</title>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css'>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./static/style.css">
 
 </head>
 
@@ -62,7 +62,48 @@
 
 
         </nav>
-      </body>
-  </body>
-  
-  </html>
+
+
+        <!-- ===== ABOUT US ===== -->
+        <!--
+        <section class="about py-5 ">
+
+            <div class="container ">
+
+              
+                <div class="row ">
+
+                    <div class="col text-center my-4 mb-5 ">
+                        <h1 class="about-heading text-dark text-uppercase "> Welcome To Husky Robotics</h1>
+                    </div>
+
+                </div>
+             
+
+                <div class="row ">
+                    <div class="col-12 ">
+                        <p class="lead text-center about-text "> Husky Robotics is Registered Student Organization at the University of Washington building Mars Rovers to compete in the international Rover Challenge Series. We placed 2nd in the world at our most recent competition, outscoring
+                            teams from Shanghai to Warsaw. Our team provides UW students the opportunity to develop their skills as part of a large interdisciplinary science and engineering project. We turn our member's passion for robotics, space, science
+                            and engineering into skills and experience, providing a unique opportunity for UW students to become experienced engineers.
+                            <p>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>--->
+
+        <!-- ===== END OF ABOUT US ===== -->
+
+    </body>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js " integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49 " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js " integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy " crossorigin="anonymous "></script>
+    <!-- partial -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+    <script src="./script.js "></script>
+
+</body>
+
+</html>
