--- a/donate.html
+++ b/donate.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Donate</title>
+    <title>Husky Robotics</title>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css'>
-    <link rel="stylesheet" href="./static/style.css">
+    <link rel="stylesheet" href="./static/index.css">
 
 </head>
 
@@ -62,15 +62,34 @@
 
 
         </nav>
+        <div id="about">
+            <section class="hero-section">
 
+                <div class="container-fluid">
+
+                    <div class="row justify-content-center">
+
+                        <div class="col-12">
+                            <h1 class="text-hero text-center text-white text-uppercase"> Husky Robotics </h1>
+                        </div>
+
+                        <div class="col-14">
+                            <a href="#about" class="ca3-scroll-down-link ca3-scroll-down-arrow" data-ca3_iconfont="ETmodules " data-ca3_icon=" "></a>
+                        </div>
+                    </div>
+
+                </div>
+
+            </section>
+        </div>
 
         <!-- ===== ABOUT US ===== -->
-        <!--
+
         <section class="about py-5 ">
 
             <div class="container ">
 
-              
+                <!-- ===== TITLE CONTENT ===== -->
                 <div class="row ">
 
                     <div class="col text-center my-4 mb-5 ">
@@ -78,7 +97,7 @@
                     </div>
 
                 </div>
-             
+                <!-- ===== END OF TITLE CONTENT ===== -->
 
                 <div class="row ">
                     <div class="col-12 ">
@@ -91,7 +110,12 @@
 
             </div>
 
-        </section>--->
+        </section>
+
+        <section id="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/MvRJD__md8o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        </section>
 
         <!-- ===== END OF ABOUT US ===== -->
 
@@ -102,7 +126,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js " integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy " crossorigin="anonymous "></script>
     <!-- partial -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-    <script src="./script.js "></script>
+    <script src="./static/script.js "></script>
 
 </body>
 
