--- a/donate.html
+++ b/donate.html
@@ -101,10 +101,11 @@
 
                 <div class="row ">
                     <div class="col-12 ">
-                        <p class="lead text-center about-text "> Husky Robotics is Registered Student Organization at the University of Washington building Mars Rovers to compete in the international Rover Challenge Series. We placed 2nd in the world at our most recent competition, outscoring
-                            teams from Shanghai to Warsaw. Our team provides UW students the opportunity to develop their skills as part of a large interdisciplinary science and engineering project. We turn our member's passion for robotics, space, science
-                            and engineering into skills and experience, providing a unique opportunity for UW students to become experienced engineers.
-                            <p>
+                        <p class="lead text-center about-text "> 
+                        Husky Robotics handles all its own fundraising; if you like what we are doing, and want to support our goal of helping UW students become better engineers, scientists, and leaders, why not donate to us directly using the button below?  We have no overhead;  all of the funds we raise go directly towards purchasing components and materials to build the rover and to rent the vehicles and rooms we use during the competition. 
+
+                        The UW Foundation is a 501(c)(3), so your donation is tax-deductible. To Donate, click the button below, and search for 'UW Husky Robotics Team'. Then 'Add Gift', and select your donation level. 
+                        <p>
                     </div>
                 </div>
 
