--- a/donate.html
+++ b/donate.html
@@ -70,7 +70,7 @@
                     <div class="row justify-content-center">
 
                         <div class="col-12">
-                            <h1 class="text-hero text-center text-white text-uppercase"> Husky Robotics </h1>
+                           <img> </img>
                         </div>
 
                         <div class="col-14">
@@ -113,10 +113,7 @@
 
         </section>
 
-        <section id="video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/MvRJD__md8o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-        </section>
+       
 
         <!-- ===== END OF ABOUT US ===== -->
 
