--- a/donate.html
+++ b/donate.html
@@ -70,7 +70,7 @@
                     <div class="row justify-content-center">
 
                         <div class="col-12">
-                           <img> </img>
+                             <img src = "img/donate.png">
                         </div>
 
                         <div class="col-14">
@@ -93,7 +93,9 @@
                 <div class="row ">
 
                     <div class="col text-center my-4 mb-5 ">
-                        <h1 class="about-heading text-dark text-uppercase "> Welcome To Husky Robotics</h1>
+                       <a href = "https://www.washington.edu/giving/make-a-gift/" > 
+                           <h1 class="about-heading text-dark text-uppercase "> Donate To Husky Robotics</h1> 
+                        </a>
                     </div>
 
                 </div>
