--- a/donate.html
+++ b/donate.html
@@ -94,7 +94,7 @@
 
                     <div class="col text-center my-4 mb-5 ">
                        <a href = "https://www.washington.edu/giving/make-a-gift/" > 
-                           <h1 class="about-heading text-dark text-uppercase "> Donate To Husky Robotics</h1> 
+                           <img src = "images/donate.png">
                         </a>
                     </div>
 
