--- a/donate.html
+++ b/donate.html
@@ -70,7 +70,7 @@
                     <div class="row justify-content-center">
 
                         <div class="col-12">
-                             <img src = "img/donate.png">
+                             <h1 class="text-hero text-center text-white text-uppercase"> Husky Robotics </h1>
                         </div>
 
                         <div class="col-14">
