--- a/donate.html
+++ b/donate.html
@@ -94,7 +94,7 @@
 
                     <div class="col text-center my-4 mb-5 ">
                        <a href = "https://www.washington.edu/giving/make-a-gift/" > 
-                           <img src = "images/donate.png">
+                           <img src = "images/donate.png" style="width:500px;height:600px;">
                         </a>
                     </div>
 
